styles/components/Navigation.module.scss
.fixed {
  position: fixed;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
}

@mixin hidden() {
  opacity: 0;
  pointer-events: none;
}

@mixin show() {
  opacity: 1;
  pointer-events: auto;
}

@mixin rootLocation() {
  bottom: 100px;
  left: 50%;
}

.relative {
  position: relative;
  height: 100%;
  width: 100%;
  background-color: #0000;
  transition: background-color ease var(--transition-time);

  button, a {
    position: absolute;
    @include rootLocation;
    background-color: transparent;
    border: none;
    outline: none;
    cursor: pointer;
    width: 40px;
    line-height: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    height: 40px;
    transform: translate(-50%, -50%);
    transition: all 100ms ease;
    color: var(--bg-contrast-text);
    gap: 10px;
    font-size: 1rem;
    -webkit-tap-highlight-color: transparent;

    svg {
      font-size: 2rem;
    }
  }
}


.compassOptions > button, .compassOptions > a {
  @include hidden;
}

.showCompassOptions > button, .showCompassOptions > a {
  @include show;

  &[data-name="settings"] {
    bottom: 200px;
    left: 10%;
  }

  &[data-name="portfolio"] {
    bottom: 200px;
    left: 30%;
  }

  &[data-name="blog"] {
    bottom: 200px;
    left: 50%;
  }

  &[data-name="gallery"] {
    bottom: 200px;
    left: 70%;
  }

  &[data-name="contact"] {
    bottom: 200px;
    left: 90%;
  }
}

.blogOptions > button, .blogOptions > a {
  @include hidden;
}

.showBlogOptions > button, .showBlogOptions > a {
  @include show;

  &[data-name="recent"] {
    bottom: 200px;
    left: 40%;
  }

  &[data-name="search"] {
    bottom: 200px;
    left: 60%;
  }
}

.focus {
  bottom: 100px !important;
  left: 50% !important;

  span {
    display: none !important;
  }
}

.unfocus {
  bottom: 100px !important;
  left: 50% !important;
  opacity: 0 !important;
  pointer-events: none !important;
}

.backdrop {
  background-color: var(--trans-bg);
}

